--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,24 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      # Krok 1: Checkout repozytorium
-      - uses: actions/checkout@v2
-      # Krok 2: Zainstaluj Python i zależności
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Setup Google Sheets
+        run: |
+          echo "$GOOGLE_SHEETS_CREDENTIALS" > credentials.json
+      - name: Clone repository
+        uses: actions/checkout@v2
         with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Krok 3: Uruchom trenowanie modelu
-      - name: Run training script
-        run: |
-          python s25853.py
-          cat accuracy.txt
-      # Krok 4: Wyświetl wynik (accuracy)
-      - name: Display training result
-        run: cat accuracy.txt
+          repository: User/Lab2-s25853
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run data cleaning script
+        run: python3 generator_danych.py -s <args>
+      - name: Display report
+        run: cat report.txt
