--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,39 @@
-name: Data Cleaning and Model Training
+
+name: Lab3 - Analizator Wynikow
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.8'
 
-    - name: Install Dependencies
+    - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pandas scikit-learn matplotlib joblib
 
-    - name: Run Data Cleaning Script
-      run: |
-        python scripts/data_cleaning.py
+    - name: Data Exploration
+      run: python data_exploration.py
 
-    - name: Run Model Training Script
-      run: |
-        python scripts/model_training.py
+    - name: Feature Engineering
+      run: python feature_engineering.py
 
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: Results
-        path: |
-          cleaned_data.csv
-          report.txt
-          log.txt
+    - name: Train Model
+      run: python train_model.py
+
+    - name: Evaluate Model
+      run: python evaluate_model.py
